@@ -18,7 +18,7 @@ import uuid
 from concurrent.futures import Future
 from six.moves import queue
 
-from gremlin_python.driver import resultset
+from gremlin_python.driver import resultset, useragent
 
 __author__ = 'David M. Brown (davebshow@gmail.com)'
 
@@ -26,7 +26,7 @@ __author__ = 'David M. Brown (davebshow@gmail.com)'
 class Connection:
 
     def __init__(self, url, traversal_source, protocol, transport_factory,
-                 executor, pool, headers=None):
+                 executor, pool, headers=None, enable_user_agent_on_connect=True):
         self._url = url
         self._headers = headers
         self._traversal_source = traversal_source
@@ -37,6 +37,11 @@ class Connection:
         self._pool = pool
         self._results = {}
         self._inited = False
+        self._enable_user_agent_on_connect = enable_user_agent_on_connect
+        if self._enable_user_agent_on_connect:
+            if self._headers is None:
+                self._headers = dict()
+            self._headers[useragent.userAgentHeader] = useragent.userAgent
 
     def connect(self):
         if self._transport:
